--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -43,16 +43,17 @@ body {
 }
 
 .video-container {
+  position: relative;
   width: 80%;
   max-width: 720px;
-  border: 4px solid #ff4500;
+  border: 1px solid #ff4500;
   animation: borderAnimation 5s infinite;
   border-radius: 8px;
-  width: 100%;
-  padding-top: 56.25%;
+  overflow: hidden;
 }
 
 .video-container video {
+  display: block;
   width: 100%;
   height: auto;
   border-radius: 8px;
