--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -77,6 +77,17 @@ body {
   margin-bottom: 10px;
 }
 
+.interaction-container textarea.user-input {
+  width: 100%;
+  padding: 20px;
+  font-size: 18px;
+  border-radius: 4px;
+  border: none;
+  margin-bottom: 10px;
+  resize: none;
+  overflow-y: hidden;
+}
+
 .interaction-container button {
   padding: 15px 25px;
   font-size: 18px;
