--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -111,3 +111,14 @@ body {
   border-radius: 4px;
   background-color: #444;
 }
+
+.service-configuration img {
+  width: 100%;
+  max-width: 720px;
+  height: auto;
+  border-radius: 8px;
+}
+
+.service-configuration {
+  margin-top: 30px;
+}
