--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -30,7 +30,7 @@ textarea {
 
 .App {
   text-align: center;
-  background: linear-gradient(45deg, #333, #555);
+  /* background: linear-gradient(45deg, #333, #555); */
   color: white;
   min-height: 100vh;
   display: flex;
