--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -53,7 +53,7 @@ body {
   position: relative;
   padding: 15px 25px;
   font-size: 18px;
-  background-color: #ff4500;
+  background-color: rgba(255, 69, 0, 0.5);
   color: white;
   border: none;
   border-radius: 4px;
@@ -63,7 +63,7 @@ body {
 }
 
 .alien-button:hover {
-  background-color: orange;
+  background-color: rgba(255, 165, 0, 0.5);
 }
 
 .alien-icon {
@@ -126,6 +126,7 @@ body {
   margin-bottom: 10px;
   resize: none;
   overflow-y: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .interaction-container button {
@@ -153,7 +154,8 @@ body {
   padding: 30px;
   border: 1px solid #444;
   border-radius: 4px;
-  background-color: #222;
+  background-color: transparent;
+  color: white;
 }
 
 .service-configuration img {
