--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -126,7 +126,8 @@ body {
   margin-bottom: 10px;
   resize: none;
   overflow-y: hidden;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
 }
 
 .interaction-container button {
@@ -152,7 +153,7 @@ body {
   max-width: 720px;
   margin-top: 20px;
   padding: 30px;
-  border: 1px solid #444;
+  /* border: 1px solid #444; */
   border-radius: 4px;
   background-color: transparent;
   color: white;
