--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -73,7 +73,7 @@ body {
   position: absolute;
   right: 10px;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-50%) scale(1);
   width: 24px;
   transition: transform 0.3s ease, width 0.3s ease;
   margin-left: 10px;
@@ -81,7 +81,7 @@ body {
 }
 
 .alien-button:hover .alien-icon {
-  transform: scale(1.2);
+  transform: translateY(-50%) scale(1.2);
   width: 28px;
 }
 
@@ -215,4 +215,36 @@ h5 a:hover {
 .service-configuration {
   z-index: 1;
   position: relative;
+}
+
+.loading {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.loading-overlay img {
+  width: 100px;
+  height: 100px;
+}
+
+.loading-gif {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+  z-index: 10;
 }
