--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     overflow: auto;
     position: relative;
-    padding-top: 200px;
+    padding-top: 100px;
     padding-bottom: 90px;
 }
 
@@ -28,7 +28,7 @@ footer {
 }
 
 header {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
