--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -45,6 +45,21 @@ body {
   margin: 0;
 }
 
+.app-header,
+.app-footer {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px 0;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+}
+
+.app-footer {
+  margin-top: 30px;
+  font-size: 16px;
+}
+
 :lang(ja) {
   font-family: Arial, sans-serif;
 }
