--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -38,8 +38,24 @@ textarea {
   align-items: center;
   justify-content: flex-start;
   padding: 20px;
-  height: 100vh;
+  height: 100%;
+  box-sizing: border-box;
   justify-content: space-between;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body,
+html {
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
