--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -37,10 +37,16 @@ textarea {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 20px;
+  /* padding: 20px; */
   height: 100%;
   box-sizing: border-box;
   justify-content: space-between;
+}
+
+.interaction-container,
+.response-container,
+.service-configuration {
+  padding: 20px;
 }
 
 body::-webkit-scrollbar {
