--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -79,6 +79,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 24px;
 }
 
 .app-footer {
@@ -307,4 +308,10 @@ h5 a:hover {
   width: 150px;
   height: 150px;
   z-index: 10;
+}
+
+@media (max-width: 375px) {
+  .interaction-container textarea.user-input {
+    width: 90%;
+  }
 }
