--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     overflow: auto;
     position: relative;
-    padding-top: 150px;
+    padding-top: calc(80px + 20px);
     padding-bottom: 90px;
 }
 
@@ -32,11 +32,11 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    height: 80px;
+    height: auto;
+    padding: 10px 0;
     z-index: 20;
     background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
-    padding: 20px 0;
 }
 
 header h1 {
