--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -41,6 +41,8 @@ textarea {
   height: 100%;
   box-sizing: border-box;
   justify-content: space-between;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 .interaction-container,
@@ -56,6 +58,7 @@ body::-webkit-scrollbar {
 body {
   margin: 0;
   padding: 0;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
