--- a/quantum/my-quantum-music-app/src/App.css
+++ b/quantum/my-quantum-music-app/src/App.css
@@ -73,6 +73,8 @@
   color: #079cf3;
   text-decoration: none;
   transition: all 1s;
+  font-size: 1.3rem;
+
 }
 
 .header-menu a:hover {
@@ -96,16 +98,24 @@
 }
 
 .explore-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  position: relative;
-  width: 100%;
-  max-width: 400px;
-  background-color: #61dafb;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  background: #ffffff;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 999;
 }
 
 .audio-spectrum {
