--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -18,6 +18,7 @@ body {
     position: relative;
     padding-top: calc(80px + 20px);
     padding-bottom: 90px;
+    overflow-x: hidden;
 }
 
 header,
@@ -182,7 +183,6 @@ textarea {
     color: white;
     resize: vertical;
     width: 100%;
-    /* 240%から100%に変更 */
     max-width: 1500px;
 }
 
@@ -219,7 +219,6 @@ h5 a:hover {
 .generated-images-container {
     display: flex;
     flex-direction: column;
-    /* 画像を縦に並べる */
     align-items: center;
     width: 100%;
     gap: 20px;
@@ -234,7 +233,6 @@ h5 a:hover {
     height: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin-bottom: 10px;
-    /* 追加 */
 }
 
 .hidden {
