--- a/quantum/my-quantum-music-app/src/App.css
+++ b/quantum/my-quantum-music-app/src/App.css
@@ -121,7 +121,7 @@
 .audio-spectrum {
   width: 100%;
   height: 200px;
-  background: #f2f2f2;
+  /* background: #f2f2f2; */
   position: relative;
 }
 
