--- a/quantum/my-quantum-music-app/src/App.css
+++ b/quantum/my-quantum-music-app/src/App.css
@@ -106,6 +106,8 @@
   background: #ffffff;
   padding: 20px;
   border-radius: 5px;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 .overlay {
@@ -123,6 +125,11 @@
   height: 200px;
   /* background: #f2f2f2; */
   position: relative;
+}
+
+.audio-spectrum video {
+  max-width: 100%;
+  max-height: 150px;
 }
 
 .close-button {
@@ -170,7 +177,8 @@
   }
 
   .explore-container {
-    width: 95%;
-    left: 2.5%;
+    width: 90%;
+    left: 5%;
+    transform: translate(0, -50%);
   }
 }
