--- a/quantum/my-quantum-music-app/src/App.css
+++ b/quantum/my-quantum-music-app/src/App.css
@@ -143,6 +143,7 @@
   cursor: pointer;
 }
 
+.download-button,
 .generate-button,
 .play-button,
 .stop-button {
@@ -156,6 +157,7 @@
   transition: all 0.3s;
 }
 
+.download-button:hover,
 .generate-button:hover,
 .play-button:hover,
 .stop-button:hover {
@@ -164,6 +166,134 @@
 
 .hide {
   display: none;
+}
+
+.status-text {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.status-text.processing {
+  animation: colorChange 5s infinite alternate;
+}
+
+@keyframes colorChange {
+  0% {
+    color: gray;
+  }
+
+  25% {
+    color: magenta;
+  }
+
+  50% {
+    color: yellow;
+  }
+
+  75% {
+    color: cyan;
+  }
+
+  100% {
+    color: blue;
+  }
+}
+
+.status-text.done {
+  color: blue;
+}
+
+.status-text.error {
+  color: red;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  margin-top: -100px;
+  animation: dropDown 1.5s forwards;
+}
+
+@keyframes dropDown {
+  0% {
+    transform: translateY(-100vh);
+  }
+
+  80% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.icon {
+  width: 50ox;
+  height: 50px;
+  cursor: pointer;
+  transition: all 1s;
+}
+
+.icon:hover {
+  transform: scale(1.1);
+}
+
+.overlay-icon {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+}
+
+.close-button-icon {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: white;
+  border: none;
+  font-size: 24px;
+  padding: 5px 10px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.overlay-system {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 999;
+}
+
+.design-image {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 80%;
+  max-height: 80%;
+  z-index: 1000;
+  border: 1px solid #ffffff;
+}
+
+.close-button-system {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 1001;
 }
 
 @media (max-width: 375px) {
@@ -177,7 +307,7 @@
   }
 
   .explore-container {
-    width: 85%;
+    width: 80%;
     left: 5%;
     transform: translate(0, -50%);
   }
