--- a/quantum/my-quantum-music-app/src/App.css
+++ b/quantum/my-quantum-music-app/src/App.css
@@ -213,6 +213,7 @@
   padding: 20px;
   margin-top: -100px;
   animation: dropDown 1.5s forwards;
+  z-index: 1000;
 }
 
 @keyframes dropDown {
@@ -234,10 +235,12 @@
   height: 50px;
   cursor: pointer;
   transition: all 1s;
+  z-index: 1000;
 }
 
 .icon:hover {
   transform: scale(1.1);
+  z-index: 1000;
 }
 
 .overlay-icon {
@@ -252,14 +255,15 @@
 
 .close-button-icon {
   position: fixed;
-  top: 20px;
-  right: 20px;
-  background-color: white;
+  top: 10px;
+  right: 10px;
+  background-color: red;
+  color: white;
   border: none;
-  font-size: 24px;
-  padding: 5px 10px;
+  border-radius: 50%;
+  font-size: 20px;
   cursor: pointer;
-  z-index: 2;
+  z-index: 1001;
 }
 
 .overlay-system {
